--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="nav">
         <h2>FlashcardGPT</h2>
-        <a href="/app/" class="nav__link" data-link>Dashboard</a>
+        <a href="/" class="nav__link" data-link>Dashboard</a>
     </nav>
     <div id="app"></div>
     <script type="module" src="/static/js/index.js"></script>
