--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,10 @@
 <body>
     <nav class="nav">
         <h2>FlashcardGPT</h2>
-        <a href="/" class="nav__link" data-link>Dashboard</a>
+        <a href="/" class="nav__link" data-link id="home">Home</a>
+        <a href="/login" class="nav__link" data-link id="login">Login</a>
+        <a href="/register" class="nav__link" data-link id="register">Register</a>
+        <a href="/answers" class="nav__link" data-link id="answers">Answers</a>
     </nav>
     <div id="app"></div>
     <script type="module" src="/static/js/index.js"></script>
