--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
         <div id="already-logged-in-links">
             <a href="/decks" class="nav__link" data-link id="decks">Decks</a>
             <a href="/answers" class="nav__link" data-link id="answers">Answers</a>
-            <a href="/" class="nav__link" id="loggout">Log out</a>
+            <a href="/" class="nav__link" id="logout">Log out</a>
         </div>
     </nav>
     <div id="app"></div>
