Added delete account feature + more refactoring

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
             <a href="/decks" class="nav__link" data-link id="decks">Decks</a>
             <a href="/answers" class="nav__link" data-link id="answers">Answers</a>
             <a href="/" class="nav__link" id="logout">Log out</a>
+            <a href="/delete_account" class="nav__link" data-link id="delete-account">Delete account</a>
         </div>
     </nav>
     <div id="app"></div>
