--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,6 @@
         </div>
     </nav>
     <div id="app"></div>
-    <script type="module" src="/static/js/index.js"></script>
+    <script type="module" src="/static/js/router.js"></script>
 </body>
 </html>
